Header transition `container` -> `nav`.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,6 @@
 
 <body>
 <header>
-    <div class="container">
-    <nav class="header-left">
-        <a class="home" href="#">Home</a>
-        <a class="testimonials" href="#testimonials">Testimonials</a>
-        <a class="trending-stories" href="#trending-stories">Trending stories</a>
-    </nav>
-
     <a class="logo" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">
         <svg viewBox="0 0 10 10" width="44px">
             <circle cx="5" cy="5" r="3.7" stroke-width="2" stroke="#1ABE84" fill="#fff"/>
@@ -31,11 +24,18 @@
         </svg>
     </a>
 
-    <nav class="header-right">
-        <button class="login">Login</button>
-        <button class="register">Register</button>
+    <nav>
+        <div class="header-left">
+            <a class="home" href="#">Home</a>
+            <a class="testimonials" href="#testimonials">Testimonials</a>
+            <a class="trending-stories" href="#trending-stories">Trending stories</a>
+        </div>
+
+        <div class="header-right">
+            <button class="login">Login</button>
+            <button class="register">Register</button>
+        </div>
     </nav>
-    </div>
 
     <label>
         <input class="theme_toggle" id="theme_toggle" type="checkbox" checked>
